# captain-agent

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  osquery-version.txt  package.json  pnpm-lock.yaml
captain-common/: Cargo.toml
captain-common/src/: event.rs  finding.rs  ipc.rs  lib.rs  rule.rs  target.rs
captain-helper/: Cargo.toml
captain-helper/src/: bus.rs  main.rs  uds_server.rs
captain-helper/src/osquery/: config_gen.rs  mod.rs  normalize.rs  subscriber.rs  supervisor.rs
install/: com.captainagent.helper.plist
scripts/: captain-diagnose.sh  dev-run-helper.sh  fetch-osqueryd.sh  install-helper.sh  uninstall-helper.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bus.rs  helper_client.rs  lib.rs  main.rs  notify.rs
src-tauri/src/api/: dashboard.rs  mod.rs  reports.rs  settings.rs
src-tauri/src/rule/: correlation.rs  loader.rs  metric.rs  mod.rs  single.rs  store_rules.rs
src-tauri/src/rule/builtin/: commands.yaml  correlations.yaml  credentials.yaml  metrics.yaml  mod.rs  network.yaml  persistence.yaml
src-tauri/src/store/: batch_writer.rs  findings.rs  mod.rs  schema.rs
src/api/: events.ts
src/i18n/: index.tsx  translations.ts
src/views/: Dashboard.tsx  Findings.tsx  Rules.tsx  Settings.tsx  Targets.tsx  Timeline.tsx
tests/scenarios/: agent_misbehavior.sh  correlation_test.sh
