[workspace]
resolver = "2"
members = [
    "src-tauri",
    "captain-common",
    "captain-helper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Captain Agent contributors"]

[workspace.dependencies]
# Shared runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Workspace-internal
captain-common = { path = "captain-common" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
