[package]
name = "captain-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AI Agent behavior audit tool — cross-platform desktop monitor"

[lib]
name = "captain_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace-shared
captain-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Tauri shell
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }

# Rule engine helpers (Slice 2+)
serde_yaml = "0.9"
regex = "1"
glob = "0.3"

# Notifications (Slice 4)
notify-rust = "4"

# Misc
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
